--- a/Source/RedSheeps.Wpf/RedSheeps.Wpf.csproj
+++ b/Source/RedSheeps.Wpf/RedSheeps.Wpf.csproj
@@ -18,14 +18,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="Microsoft.Expression.Interactions">
-      <HintPath>..\..\Library\Microsoft.Expression.Interactions.dll</HintPath>
-    </Reference>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="System.Windows.Interactivity">
-      <HintPath>..\..\Library\System.Windows.Interactivity.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xaml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
